changes in about me

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <td><img src="TVK.png" alt="TVK"></td>
                 <td><h1>Tolmatti Vamshi Krishna</h1>
                     <p><em>Business Developer at <strong> <a target="_blank" href="https://softveer.com/">Softveer Technologies Pvt Ltd</a></strong></em></p>
-                    <p>I am a Business Developer with a strong background on Project Operations and Delivery Management. I ❤️ Moto Racing 🏎️ 🏍️and interested to stay in Islands 🏝️🏕️🏞️🏖️</p></td>
+                    <p>I am a Business Developer with a strong background on Project Operations and Delivery Management. I ❤️ Moto Racing 🏎️ 🏍️and interested to visit Islands 🏝️🏕️🏞️🏖️</p></td>
             </tr>
         </table>
         <hr>
