--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>2021-2023</td>
-                    <td>Associate - Google Fi at Acenture Hyderabad</td>
+                    <td>Senior Associate - G-Fi Operantions at Acenture Hyderabad</td>
                 </tr>
                 <tr>
                     <td>2020-2021</td>
